--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/portofoliu/index.html">
-            <img src="/portofoliu/media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
+          <a class="navbar-brand" href="index.html">
+            <img src="/media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
           <ul class="navbar-nav float-end">
             <li class="nav-item">
-                <a class="nav-link" href="/portofoliu/projects/projects.html">Projects</a>
+                <a class="nav-link" href="/projects/projects.html">Projects</a>
               </li>
             </ul>
         </div>
@@ -33,7 +33,7 @@
         <div class="row" style="flex-wrap: nowrap;">
             <!-- Left side: Image -->
             <div class="col-5 me-5">
-                <img src="/portofoliu/media/logo.webp" class="rounded-circle img-fluid border border-primary border-3 shadow" alt="Avatar pic" style="width: 250px;">
+                <img src="/media/logo.webp" class="rounded-circle img-fluid border border-primary border-3 shadow" alt="Avatar pic" style="width: 250px;">
             </div>
             <!-- Right side: Text box -->
             <div class="col-7 d-flex justify-content-center align-items-center rounded-4" style="background-color: rgba(12, 37, 56, 0.6);">
