--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="/blob/main/index.html">
             <img src="/blob/main/media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
           <ul class="navbar-nav float-end">
             <li class="nav-item">
-                <a class="nav-link" href="/projects/projects.html">Projects</a>
+                <a class="nav-link" href="/blob/main/projects/projects.html">Projects</a>
               </li>
             </ul>
         </div>
@@ -33,7 +33,7 @@
         <div class="row" style="flex-wrap: nowrap;">
             <!-- Left side: Image -->
             <div class="col-5 me-5">
-                <img src="/media/logo.webp" class="rounded-circle img-fluid border border-primary border-3 shadow" alt="Avatar pic" style="width: 250px;">
+                <img src="/blob/main/media/logo.webp" class="rounded-circle img-fluid border border-primary border-3 shadow" alt="Avatar pic" style="width: 250px;">
             </div>
             <!-- Right side: Text box -->
             <div class="col-7 d-flex justify-content-center align-items-center rounded-4" style="background-color: rgba(12, 37, 56, 0.6);">
@@ -161,7 +161,7 @@ Above all, I value comfort, patience, and mutual support in a work environment. 
                 <div class="col-md-4 align-content-center">
                     <div class="container p-2 bg-secondary text-light border border-3" style="font-size: 10px; text-align: justify;">
                         <p>All design, images, and content were created by me, except for the animated header, originally made by Barbara Rodriguez on <a href="https://codepen.io/baarbaracrr/pen/KKovmGb" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">CodePen</a>. Many thanks to her for the inspiration and work!</p>
-                        <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="/projects/web/web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
+                        <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="/blob/main/projects/web/web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
                     </div>
                 </div>
             </div>
