--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
           <a class="navbar-brand" href="/blob/main/index.html">
-            <img src="/blob/main/media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
+            <img src="/portofolio/blob/main/media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
