--- a/projects/projects.html
+++ b/projects/projects.html
@@ -6,20 +6,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/portofoliu/tori_style.css">
+    <link rel="stylesheet" href="tori_style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/portofoliu/index.html">
-            <img src="/portofoliu/media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
+          <a class="navbar-brand" href="../index.html">
+            <img src="../media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
           <ul class="navbar-nav float-end">
             <li class="nav-item active">
-                <a class="nav-link" href="/portofoliu/projects/projects.html">Projects</a>
+                <a class="nav-link" href="projects.html">Projects</a>
               </li>
             </ul>
         </div>
@@ -31,8 +31,8 @@
                 <div class="row text-light p-5 my-5">
                     <div class="col-md-4">
                         <div class="card border border-5 border-light rounded-0 m-5" style="width:300px; box-shadow: 0px 3px 10px 2px rgb(74, 74, 74);">
-                            <a href="/portofoliu/projects/thesis.html" id="thumbnail_txt">
-                            <img class="card-img-top rounded-0" src="/portofoliu/media/thesis_img.webp" alt="Card image">
+                            <a href="thesis.html" id="thumbnail_txt">
+                            <img class="card-img-top rounded-0" src="../media/thesis_img.webp" alt="Card image">
                             <div class="card-img-overlay d-flex justify-content-center align-items-center rounded-0" style="background-color: rgba(67, 84, 89, 0.6);">
                               <h4 class="card-title" style="font-weight: bold; color: rgb(37, 39, 50); text-shadow: 0px 0px 5px #fff;">Thesis</h4>
                             </div>
@@ -41,8 +41,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card border border-5 border-light rounded-0 m-5" style="width:300px; box-shadow: 0px 3px 10px 2px rgb(74, 74, 74);">
-                            <a href="/portofoliu/projects/web/web.html" id="thumbnail_txt">
-                                <img class="card-img-top rounded-0" src="/portofoliu/media/web_img.webp" alt="Card image">
+                            <a href="web/web.html" id="thumbnail_txt">
+                                <img class="card-img-top rounded-0" src="../media/web_img.webp" alt="Card image">
                                 <div class="card-img-overlay d-flex justify-content-center align-items-center rounded-0" style="background-color: rgba(67, 84, 89, 0.6);">
                                   <h4 class="card-title" style="font-weight: bold; color: rgb(37, 39, 50); text-shadow: 0px 0px 5px #fff;">Web</h4>
                                 </div>
@@ -51,8 +51,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card border border-5 border-light rounded-0 m-5" style="width:300px; box-shadow: 0px 3px 10px 2px rgb(74, 74, 74);">
-                            <a href="/portofoliu/projects/android/android.html" id="thumbnail_txt">
-                                <img class="card-img-top rounded-0" src="/portofoliu/media/andr_img.webp" alt="Card image">
+                            <a href="android/android.html" id="thumbnail_txt">
+                                <img class="card-img-top rounded-0" src="../media/andr_img.webp" alt="Card image">
                                 <div class="card-img-overlay d-flex justify-content-center align-items-center rounded-0" style="background-color: rgba(67, 84, 89, 0.6);">
                                   <h4 class="card-title" style="font-weight: bold; color: rgb(37, 39, 50); text-shadow: 0px 0px 5px #fff;">Android</h4>
                                 </div>
@@ -82,7 +82,7 @@
                 <div class="col-md-4 align-content-center">
                     <div class="container p-2 bg-secondary text-light border border-3" style="font-size: 10px; text-align: justify;">
                         <p>All design, images, and content were created by me, except for the animated header, originally made by Barbara Rodriguez on <a href="https://codepen.io/baarbaracrr/pen/KKovmGb" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">CodePen</a>. Many thanks to her for the inspiration and work!</p>
-                        <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="/projects/web/web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
+                        <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="web/web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
                     </div>
                 </div>
             </div>
