--- a/projects/thesis.html
+++ b/projects/thesis.html
@@ -12,14 +12,14 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/portofoliu/index.html">
-            <img src="/portofoliu/media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
+          <a class="navbar-brand" href="../index.html">
+            <img src="media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
           <ul class="navbar-nav float-end">
             <li class="nav-item active">
-                <a class="nav-link" href="/portofoliu/projects/projects.html">Projects</a>
+                <a class="nav-link" href="projects.html">Projects</a>
               </li>
             </ul>
         </div>
@@ -38,27 +38,27 @@
                     <div class="row g-4 d-flex justify-content-center align-items-center" id="thesis_imgs" style="height: 80vh; overflow-y: auto;">
                         <!-- Image 1 -->
                         <div class="col-md-6">
-                          <img src="/portofoliu/media/thesis/macheta.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal1">
+                          <img src="media/thesis/macheta.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal1">
                         </div>
                         <!-- Image 2 -->
                         <div class="col-md-6">
-                          <img src="/portofoliu/media/thesis/steps.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal2">
+                          <img src="media/thesis/steps.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal2">
                         </div>
                         <!-- Image 3 -->
                         <div class="col-md-12">
-                          <img src="/portofoliu/media/thesis/parkcam.webp" class="img-fluid shadow" data-bs-toggle="modal" data-bs-target="#modal3">
+                          <img src="media/thesis/parkcam.webp" class="img-fluid shadow" data-bs-toggle="modal" data-bs-target="#modal3">
                         </div>
                         <!-- Image 4 -->
                         <div class="col-md-4">
-                          <img src="/portofoliu/media/finddrive/login.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal4" style="height: 60vh;">
+                          <img src="media/finddrive/login.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal4" style="height: 60vh;">
                         </div>
                         <!-- Image 5 -->
                         <div class="col-md-4">
-                          <img src="/portofoliu/media/finddrive/home.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal5" style="height: 60vh;">
+                          <img src="media/finddrive/home.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal5" style="height: 60vh;">
                         </div>
                         <!-- Image 6 -->
                         <div class="col-md-4">
-                          <img src="/portofoliu/media/finddrive/profile.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal6" style="height: 60vh;">
+                          <img src="media/finddrive/profile.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal6" style="height: 60vh;">
                         </div>
                       </div>
                     </div>
@@ -71,7 +71,7 @@
         <div class="modal-body pb-3">
               <!-- The Close Button -->
               <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/thesis/macheta.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="media/thesis/macheta.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/thesis/steps.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="media/thesis/steps.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -94,7 +94,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/thesis/parkcam.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="media/thesis/parkcam.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -105,7 +105,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/finddrive/login.webp"class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="media/finddrive/login.webp"class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -116,7 +116,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/finddrive/home.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="media/finddrive/home.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/finddrive/profile.webp"class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="media/finddrive/profile.webp"class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -197,7 +197,7 @@
           <div class="col-md-4 align-content-center">
               <div class="container p-2 bg-secondary text-light border border-3" style="font-size: 10px; text-align: justify;">
                   <p>All design, images, and content were created by me, except for the animated header, originally made by Barbara Rodriguez on <a href="https://codepen.io/baarbaracrr/pen/KKovmGb" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">CodePen</a>. Many thanks to her for the inspiration and work!</p>
-                  <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="/projects/web/web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
+                  <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="web/web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
               </div>
           </div>
       </div>
