--- a/projects/web/web.html
+++ b/projects/web/web.html
@@ -12,14 +12,14 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/portofoliu/index.html">
-            <img src="/portofoliu/media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
+          <a class="navbar-brand" href="../../index.html">
+            <img src="../media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
           <ul class="navbar-nav float-end">
             <li class="nav-item active">
-                <a class="nav-link" href="/portofoliu/projects/projects.html">Projects</a>
+                <a class="nav-link" href="../projects/projects.html">Projects</a>
               </li>
             </ul>
         </div>
@@ -31,8 +31,8 @@
                 <div class="row text-light p-5 mt-5">
                     <div class="col-md-6">
                         <div class="card border border-5 border-light rounded-0 m-5" style="width:300px; box-shadow: 0px 3px 10px 2px rgb(74, 74, 74);">
-                            <a href="/portofoliu/projects/web/forum.html" id="thumbnail_txt">
-                            <img class="card-img-top rounded-0" src="/portofoliu/media/forum/index.webp" alt="Card image">
+                            <a href="forum.html" id="thumbnail_txt">
+                            <img class="card-img-top rounded-0" src="../media/forum/index.webp" alt="Card image">
                             <div class="card-img-overlay d-flex justify-content-center align-items-center rounded-0" style="background-color: rgba(67, 84, 89, 0.6);">
                               <h4 class="card-title" style="font-weight: bold; color: rgb(37, 39, 50); text-shadow: 0px 0px 5px #fff;">Personal Forum</h4>
                             </div>
@@ -41,8 +41,8 @@
                     </div>
                     <div class="col-md-6">
                         <div class="card border border-5 border-light rounded-0 m-5" style="width:300px; box-shadow: 0px 3px 10px 2px rgb(74, 74, 74);">
-                            <a href="/portofoliu/projects/web/torre.html" id="thumbnail_txt">
-                                <img class="card-img-top rounded-0" src="/portofoliu/media/torre/index_1.webp" alt="Card image">
+                            <a href="torre.html" id="thumbnail_txt">
+                                <img class="card-img-top rounded-0" src="../media/torre/index_1.webp" alt="Card image">
                                 <div class="card-img-overlay d-flex justify-content-center align-items-center rounded-0" style="background-color: rgba(67, 84, 89, 0.6);">
                                   <h4 class="card-title" style="font-weight: bold; color: rgb(37, 39, 50); text-shadow: 0px 0px 5px #fff;">La Torre</h4>
                                 </div>
@@ -80,7 +80,7 @@
                 <div class="col-md-4 align-content-center">
                     <div class="container p-2 bg-secondary text-light border border-3" style="font-size: 10px; text-align: justify;">
                         <p>All design, images, and content were created by me, except for the animated header, originally made by Barbara Rodriguez on <a href="https://codepen.io/baarbaracrr/pen/KKovmGb" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">CodePen</a>. Many thanks to her for the inspiration and work!</p>
-                        <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="/projects/web/web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
+                        <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
                     </div>
                 </div>
             </div>
