--- a/projects/web/web.html
+++ b/projects/web/web.html
@@ -6,20 +6,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/portofoliu/tori_style.css">
+    <link rel="stylesheet" href="../../tori_style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
           <a class="navbar-brand" href="../../index.html">
-            <img src="../media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
+            <img src="../../media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
           <ul class="navbar-nav float-end">
             <li class="nav-item active">
-                <a class="nav-link" href="../projects/projects.html">Projects</a>
+                <a class="nav-link" href="../projects.html">Projects</a>
               </li>
             </ul>
         </div>
@@ -32,7 +32,7 @@
                     <div class="col-md-6">
                         <div class="card border border-5 border-light rounded-0 m-5" style="width:300px; box-shadow: 0px 3px 10px 2px rgb(74, 74, 74);">
                             <a href="forum.html" id="thumbnail_txt">
-                            <img class="card-img-top rounded-0" src="../media/forum/index.webp" alt="Card image">
+                            <img class="card-img-top rounded-0" src="../../media/forum/index.webp" alt="Card image">
                             <div class="card-img-overlay d-flex justify-content-center align-items-center rounded-0" style="background-color: rgba(67, 84, 89, 0.6);">
                               <h4 class="card-title" style="font-weight: bold; color: rgb(37, 39, 50); text-shadow: 0px 0px 5px #fff;">Personal Forum</h4>
                             </div>
@@ -42,7 +42,7 @@
                     <div class="col-md-6">
                         <div class="card border border-5 border-light rounded-0 m-5" style="width:300px; box-shadow: 0px 3px 10px 2px rgb(74, 74, 74);">
                             <a href="torre.html" id="thumbnail_txt">
-                                <img class="card-img-top rounded-0" src="../media/torre/index_1.webp" alt="Card image">
+                                <img class="card-img-top rounded-0" src="../../media/torre/index_1.webp" alt="Card image">
                                 <div class="card-img-overlay d-flex justify-content-center align-items-center rounded-0" style="background-color: rgba(67, 84, 89, 0.6);">
                                   <h4 class="card-title" style="font-weight: bold; color: rgb(37, 39, 50); text-shadow: 0px 0px 5px #fff;">La Torre</h4>
                                 </div>
