--- a/projects/web/forum.html
+++ b/projects/web/forum.html
@@ -6,20 +6,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/portofoliu/tori_style.css">
+    <link rel="stylesheet" href="../../tori_style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/portofoliu/index.html">
-            <img src="/portofoliu/media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
+          <a class="navbar-brand" href="../../index.html">
+            <img src="../../media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
           <ul class="navbar-nav float-end">
             <li class="nav-item active">
-                <a class="nav-link" href="/portofoliu/projects/projects.html">Projects</a>
+                <a class="nav-link" href="../../projects/projects.html">Projects</a>
               </li>
             </ul>
         </div>
@@ -38,35 +38,35 @@
                     <div class="row g-4 d-flex justify-content-center align-items-center" id="thesis_imgs" style="height: 80vh; overflow-y: auto;">
                         <!-- Image 1 -->
                         <div class="col-md-4">
-                          <img src="/portofoliu/media/forum/index.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal1">
+                          <img src="../../media/forum/index.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal1">
                         </div>
                         <!-- Image 2 -->
                         <div class="col-md-4">
-                          <img src="/portofoliu/media/forum/foro_1.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal2">
+                          <img src="../../media/forum/foro_1.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal2">
                         </div>
                         <!-- Image 3 -->
                         <div class="col-md-4">
-                          <img src="/portofoliu/media/forum/tema.webp" class="img-fluid rounded rounded-3  shadow" data-bs-toggle="modal" data-bs-target="#modal3">
+                          <img src="../../media/forum/tema.webp" class="img-fluid rounded rounded-3  shadow" data-bs-toggle="modal" data-bs-target="#modal3">
                         </div>
                         <!-- Image 4 -->
                         <div class="col-md-4">
-                          <img src="/portofoliu/media/forum/new_post.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal4">
+                          <img src="../../media/forum/new_post.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal4">
                         </div>
                         <!-- Image 5 -->
                         <div class="col-md-4">
-                          <img src="/portofoliu/media/forum/new_tema.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal5">
+                          <img src="../../media/forum/new_tema.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal5">
                         </div>
                         <!-- Image 6 -->
                         <div class="col-md-4">
-                          <img src="/portofoliu/media/forum/tori.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal6">
+                          <img src="../../media/forum/tori.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal6">
                         </div>
 
                         <div class="col-md-4">
-                          <img src="/portofoliu/media/forum/register.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal7">
+                          <img src="../../media/forum/register.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal7">
                         </div>
 
                         <div class="col-md-4">
-                          <img src="/portofoliu/media/forum/login.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal8">
+                          <img src="../../media/forum/login.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal8">
                         </div>
                       </div>
                     </div>
@@ -79,7 +79,7 @@
         <div class="modal-body pb-3">
               <!-- The Close Button -->
               <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/forum/foro_tori.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="../../media/forum/foro_tori.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -91,7 +91,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/forum/foro_1.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/forum/foro_1.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -102,7 +102,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/forum/tema_1.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/forum/tema_1.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/forum/new_post.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/forum/new_post.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -124,7 +124,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/forum/new_tema.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/forum/new_tema.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -135,7 +135,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/forum/tori.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/forum/tori.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -146,7 +146,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/forum/register.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/forum/register.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -157,7 +157,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/forum/login.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/forum/login.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
