--- a/projects/android/find_drive.html
+++ b/projects/android/find_drive.html
@@ -6,22 +6,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/portofoliu/tori_style.css">
+    <link rel="stylesheet" href="../../tori_style.css">
 </head>
-
-<!-- TODO: edit pics with real info (phone, email, etc)-->
 
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/portofoliu/index.html">
-            <img src="/portofoliu/media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
+          <a class="navbar-brand" href="../../index.html">
+            <img src="../../media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
           <ul class="navbar-nav float-end">
             <li class="nav-item active">
-                <a class="nav-link" href="/portofoliu/projects/projects.html">Projects</a>
+                <a class="nav-link" href="../projects.html">Projects</a>
               </li>
             </ul>
         </div>
@@ -40,31 +38,31 @@
                     <div class="row g-4 d-flex justify-content-center align-items-center" id="thesis_imgs" style="height: 80vh; overflow-y: auto;">
                         <!-- Image 1 -->
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/finddrive/login.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal1">
+                          <img src="../../media/finddrive/login.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal1">
                         </div>
                         <!-- Image 2 -->
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/finddrive/register.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal2">
+                          <img src="../../media/finddrive/register.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal2">
                         </div>
                         <!-- Image 3 -->
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/finddrive/home.webp" class="img-fluid rounded rounded-3  shadow" data-bs-toggle="modal" data-bs-target="#modal3">
+                          <img src="../../media/finddrive/home.webp" class="img-fluid rounded rounded-3  shadow" data-bs-toggle="modal" data-bs-target="#modal3">
                         </div>
                         <!-- Image 4 -->
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/finddrive/profile.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal4">
+                          <img src="../../media/finddrive/profile.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal4">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/finddrive/car_list.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal5">
+                          <img src="../../media/finddrive/car_list.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal5">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/finddrive/car_info.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal6">
+                          <img src="../../media/finddrive/car_info.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal6">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/finddrive/settings.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal7">
+                          <img src="../../media/finddrive/settings.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal7">
                         </div>
                       </div>
                     </div>
@@ -77,7 +75,7 @@
         <div class="modal-body pb-3">
               <!-- The Close Button -->
               <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/finddrive/login.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="../../media/finddrive/login.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -89,7 +87,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/finddrive/register.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/finddrive/register.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -100,7 +98,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/finddrive/home.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/finddrive/home.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -111,7 +109,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/finddrive/profile.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/finddrive/profile.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -122,7 +120,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/finddrive/car_list.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/finddrive/car_list.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -134,7 +132,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/finddrive/car_info.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/finddrive/car_info.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -145,7 +143,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/finddrive/settings.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/finddrive/settings.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -158,7 +156,7 @@
                   <div class="container" style="max-height: 80vh; overflow-y: auto; font-size: 13px; text-align: justify;">
                     <div class="row rounded rounded-3 px-2 py-4" style="background-color: rgba(220, 220, 220, 0.6); padding: 10px; margin: 5px; margin-bottom: 0;">   
                         <p><b>Purpose:</b> Key component of my university thesis project.</p>
-                        <p><b>Concept:</b> An Android app that allows users to create personal accounts, register their vehicles, and view their parking location within areas equipped with <a href="/projects/thesis.html" style="text-decoration: none; color: rgb(87, 155, 87); font-weight: bold;">my smart parking system</a>. User and vehicle information is stored in a MySQL database and accessed through custom APIs.</p>
+                        <p><b>Concept:</b> An Android app that allows users to create personal accounts, register their vehicles, and view their parking location within areas equipped with <a href="../thesis.html" style="text-decoration: none; color: rgb(87, 155, 87); font-weight: bold;">my smart parking system</a>. User and vehicle information is stored in a MySQL database and accessed through custom APIs.</p>
                         <p class="m-0"><b>Technologies: </b> Android Studio, Java, Volley, MySQL, REST APIs (PHP), MD3</p>
                       </div> 
                   </div>      
@@ -186,7 +184,7 @@
           <div class="col-md-4 align-content-center">
               <div class="container p-2 bg-secondary text-light border border-3" style="font-size: 10px; text-align: justify;">
                   <p>All design, images, and content were created by me, except for the animated header, originally made by Barbara Rodriguez on <a href="https://codepen.io/baarbaracrr/pen/KKovmGb" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">CodePen</a>. Many thanks to her for the inspiration and work!</p>
-                  <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="/projects/web/web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
+                  <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="../web/web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
               </div>
           </div>
       </div>
