--- a/projects/android/portal.html
+++ b/projects/android/portal.html
@@ -68,7 +68,7 @@
         <div class="modal-body pb-3">
               <!-- The Close Button -->
               <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="../../media/agram/loading.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="../../media/portal/loading.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
