--- a/projects/web/torre.html
+++ b/projects/web/torre.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
           <a class="navbar-brand" href="../../index.html">
-            <img src="/../media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
+            <img src="../../media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
